# GMParser

./: CMakeLists.txt  README.md  main  main.cc  test.gmi  test.html
include/: gmparser.h  site_generator.h
src/: gmparser.cc  hello_test.cc  main.cc  site_generator.cc
tests/: gmparser_tests.cc  site_gen_tests.cc
tests/input/: test_1.gmi
